# hackathon

./: .gitattributes  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  changed_files.txt  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts
hackathon_backend/: .dockerignore  .env.example  .gitattributes  Dockerfile  README.md  docker-compose.yml  postman_collection.json  pyproject.toml  worker_logs.txt
hackathon_backend/alembic/: env.py
hackathon_backend/alembic/versions/: 4aa599f6e130_added_project_tables.py  b3fbfb7993d2_initial_migration.py
hackathon_backend/app/: main.py
hackathon_backend/app/api/: deps 2.py  deps.py
hackathon_backend/app/api/v1/: __init__ 2.py  __init__.py
hackathon_backend/app/application/pipelines/: base.py  user_pipeline 2.py
hackathon_backend/app/application/services/: auth_service.py  category_service.py  product_search_service.py
hackathon_backend/app/application/tasks/: __init__.py  collector_task.py  data_collector.py  example_task.py
hackathon_backend/app/core/: exceptions 2.py
hackathon_backend/app/core/config/: celery 2.py  celery.py  settings 2.py  settings.py
hackathon_backend/app/core/infrastructure/: __init__.py  cache.py  circuit_breaker.py  elasticsearch.py  exchange_rate_provider.py  http_client.py  logging 2.py  logging.py
hackathon_backend/app/core/patterns/: pipeline 2.py
hackathon_backend/app/core/security/: __init__.py  auth.py  validators.py
hackathon_backend/app/core/web/: middleware.py
hackathon_backend/app/domain/i_repositories/: i_base_repository 2.py  i_category_repository.py  i_conversation_repository.py  i_message_repository.py  i_price_history_repository.py  i_product_mapping_repository.py  i_role_repository.py  i_unit_of_work.py  i_user_repository.py
hackathon_backend/app/domain/i_services/: i_cache_service 2.py  i_cache_service.py  i_currency_service.py  i_exchange_rate_provider.py  (+1 more)
hackathon_backend/app/infrastructure/: mocker_client.py  unit_of_work.py
hackathon_backend/postman/: collection.json  environment_local.json
hackathon_backend/scripts/: create_test_db_local.py  entrypoint.sh  index_products.py  init-db.sh  seed.py  test_analysis_pipeline.py
hackathon_backend/tests/: conftest.py  factories.py
hackathon_backend/tests/integration/: test_auth_routes 2.py  test_chat_api.py  test_logging.py  test_product_analysis_pipeline.py  test_redis 2.py  test_uow 2.py
hackathon_backend/tests/unit/: test_cache 2.py  test_chat_schemas.py  test_find_or_create_mapping_step.py  test_normalize_currency_step.py  test_profit_margin_step.py  test_recent_users.py  test_save_price_history_step.py  test_trend_analysis_step.py  test_user_command 2.py
mocker/hackathon_backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
(+222 files in other folders)
