[project]
name = "mocker-api"
version = "0.1.0"
description = "Provider Mock API for hackathon project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
